--- a/bwapp2/client/views/genjobs.ng.jade
+++ b/bwapp2/client/views/genjobs.ng.jade
@@ -12,7 +12,12 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       br
       label Reason:
       input(ng-model='btreason')
-      button(ng-show='btid.length && btreason.length', ng-click='blockTurker(btid, btreason)') Go
+      button.btn(ng-show='btid.length && btreason.length', ng-click='blockTurker(btid, btreason)') Go
+    .col-sm-1
+    .well.col-sm-2
+      button.btn(ng-click='refreshHITs()') 
+        i.fa.fa-refresh
+        |  Refresh HITs
   .row
     accordion.col-sm-6
       accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
