--- a/bwapp2/client/views/genpred.ng.jade
+++ b/bwapp2/client/views/genpred.ng.jade
@@ -4,23 +4,14 @@
   =========================================================*/
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row-fluid.col-sm-12
-  .row.mb-sm(ng-show='!curState.block_meta.blocks')
-    .content.col-sm-3
-      button.btn.btn-default(ng-click='opt.showImages=!opt.showImages')
-        .fa.fa-toggle-on(ng-show='opt.showImages') &nbsp;On Images
-        .fa.fa-toggle-off(ng-show='!opt.showImages') &nbsp;Off Images
-      button.btn.btn-default(ng-if='opt.showImages', ng-click='opt.showLogos=!opt.showLogos')
-        .fa.fa-toggle-on(ng-show='opt.showLogos') &nbsp;On Logos
-        .fa.fa-toggle-off(ng-show='!opt.showLogos') &nbsp;Off Logos
   div(ng-show='curState.block_meta.blocks')
-    h4 Active State: {{curState._id}} &nbsp;&nbsp; {{curState.name}}
-    h4 # Moves: {{curState.block_states.length}} &nbsp; # Blocks: {{curState.block_meta.blocks.length}}
+    h4 {{curState._id}} &nbsp;&nbsp; {{curState.name}} &nbsp; #Predictions: {{predictions.length}} &nbsp; #Blocks: {{curState.block_meta.blocks.length}}
     span(ng-repeat='block in curState.block_meta.blocks')
       | &nbsp;&nbsp;
       button.btn.btn-xs.btn-default {{block.id}} &nbsp; {{block.name | uppercase}}
     div
       button.btn.btn-primary(ng-click='clearMeta()') Reset
-  .content.col-sm-4
+  .content.col-sm-4(ng-show='!(curState.block_meta || curState.block_meta.blocks)')
     form.form-inline.ng-pristine.ng-valid(role="form",novalidate, name='importstatesform', ng-submit='loadStates()')
       b Load Prediction
       .form-group
@@ -41,16 +32,35 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               td(title="'Created'", sortable="'created'", ng-click='showState(s._id)')
                 | {{s.created | date:"MM/dd/yyyy"}}
 .row-fluid.col-sm-12
+  hr
+  .well.row
+    h3 Prediction
+      span(ng-show='predictions.length')
+        button.btn.btn-primary(ng-show='curitr > 0', ng-click='showPrediction(curitr-1)')
+          i.fa.fa-chevron-left
+        | &nbsp;&nbsp;
+        button.btn.btn-primary(ng-show='curitr+1 < predictions.length', ng-click='showPrediction(curitr+1)')
+          i.fa.fa-chevron-right
+        .pull-right(style='font-size:1.25em') {{curitr+1}}/{{predictions.length}}
+    br
+    .col-md-6.mb-lg
+      #start_state
+    .col-md-6.mb-lg
+      #gold_state
+    .col-md-6.mb-lg
+      #predicted_state
+    #galleryarea
+
+.row-fluid.col-sm-12
   .row-fluid.col-sm-6
-    h3 Scene
-    div.col-sm-7
+    //-div.col-sm-7
       b(ng-show='curcnt > -1', style='font-size:1.25em') Create Count: {{curcnt}}
       br
       b(ng-show='curitr > -1', style='font-size:1.25em') Current State: {{curitr}}
-    div.col-sm-12
+    div.col-sm-12(ng-show='isgen')
       canvas(id="renderCanvasBab", style='width: 480px; height: 360px;')
       canvas(id="canvas_2D")
-  .row-fluid.col-sm-3(ng-if='!isgen && enableImpSave && curState.block_meta.blocks')
+  //-.row-fluid.col-sm-3(ng-if='!isgen && enableImpSave && curState.block_meta.blocks')
     div.well
       form.form-inline.ng-pristine.ng-valid(ng-show='enableImpSave', name='saveImpForm', ng-submit='saveImport(impFilename)')
         .form-group
@@ -62,7 +72,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           | &nbsp;&nbsp;
           button.btn.btn-warning.btn-sm(ng-click='cancelImport()')
             .glyphicons.remove_2 Cancel
-  .row-fluid.col-sm-3(ng-if='!isgen && !enableImpSave && curState.block_meta.blocks')
+  //-.row-fluid.col-sm-3(ng-if='!isgen && !enableImpSave && curState.block_meta.blocks')
     div.well
       h4 State
       button.btn.btn-sm.btn-info.mb-sm(ng-if='!isgen && !enableImpSave && !curState._id && curState.block_meta.blocks', ng-click='startGen()') Create Layout
@@ -75,9 +85,3 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           input(type='text', ng-model='rsid', placeholder='state id')
           input(type="submit", style="position: absolute; left: -9999px; width: 1px; height: 1px;")
 
-.row-fluid.col-sm-12
-  hr
-  .well.row
-    h3 Gallery
-    br
-    #galleryarea
