updated predicted view with diff

--- a/bwapp2/client/views/genpred.ng.jade
+++ b/bwapp2/client/views/genpred.ng.jade
@@ -49,6 +49,8 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       #gold_state
     .col-md-6.mb-lg
       #predicted_state
+    .col-md-6.mb-lg
+      #diff_state
     #galleryarea
 
 .row-fluid.col-sm-12
