--- a/bwapp2/client/views/genpred.ng.jade
+++ b/bwapp2/client/views/genpred.ng.jade
@@ -43,6 +43,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           i.fa.fa-chevron-right
         .pull-right(style='font-size:1.25em') {{curitr+1}}/{{predictions.length}}
     br
+    h4 {{utterance}}
     .col-md-6.mb-lg
       #start_state
     .col-md-6.mb-lg
