detach controls added support for experiment notes and stateid

--- a/bwapp2/client/views/gensimpexp.ng.jade
+++ b/bwapp2/client/views/gensimpexp.ng.jade
@@ -71,15 +71,15 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       paneltool(tool-collapse, ng-init="panelInst=false")
     .panel-wrapper(collapse="panelInst")
       .panel-body
-        strong Move Camera: 
-        | Use WASD keys
-        br
+        //-strong Move Camera: 
+          | Use WASD keys
+          br
         strong Move Blocks: 
         | Click and hold to drag and drop blocks
         br
-        strong Point Camera: 
-        | Click and move mouse to pivot camera
-        br
+        //-strong Point Camera: 
+          | Click and move mouse to pivot camera
+          br
         strong Move Up/Down: 
         | Hold block, then press SHIFT key
         br
