updated meteor lib versions and removed button in login so firefox can log in

--- a/bwapp2/client/views/main.ng.jade
+++ b/bwapp2/client/views/main.ng.jade
@@ -14,7 +14,7 @@ div(style="top: 118px; width: 100%;  height: 600px;  position: relative;  margin
               small Have a login?
           .pull-right
             // Change this button type to submit to send the form data
-            button.btn.btn-sm.btn-primary(type="button", style="list-style-type: none;")
+            .btn.btn-sm.btn-primary(style="list-style-type: none;")
               blaze-template(name="_loginButtons")
 
   // END panel
