--- a/bwapp2/client/views/genjobs.ng.jade
+++ b/bwapp2/client/views/genjobs.ng.jade
@@ -52,7 +52,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               td(title="Name", ng-click='chooseState(s._id)')
                 | {{s.name}}
               td(title="Created", ng-click='chooseState(s._id)')
-                | {{s.created | date:"MM/dd/yyyy HH:mm"}}
+                | {{s.created | date:"yyyy/MM/dd HH:mm"}}
     accordion.col-sm-6(ng-show='curState._id')
       accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
         accordion-heading
@@ -72,7 +72,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           | &nbsp;&nbsp;&nbsp;
           | # Moves: {{curState.block_states.length}}
           | &nbsp;&nbsp;&nbsp;
-          | Created: {{curState.created | date:"MM/dd/yyyy"}}
+          | Created: {{curState.created | date:"yyyy/MM/dd"}}
         .row-fluid.col-sm-12
           form.form-inline.ng-pristine.ng-valid(name='createJobForm', ng-submit='taskGen(tasktype, movedir, bundle, asncnt, antcnt)')
             .form-group(style='margin-right: 10px')
@@ -129,7 +129,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               button.btn.btn-xs.btn-danger(ng-click='remJob(job._id)')
                 .fa.fa-remove
             td(title='{{job._id}}', ng-click='selectJob(job._id)') {{job._id}}
-            td {{job.created | date:"MM/dd/yyyy HH:mm" }}
+            td {{job.created | date:"yyyy/MM/dd HH:mm" }}
             td(title='{{job.tasktype}}') {{job.tasktype}}
             td(title='{{job.stateid}}', ng-click='chooseState(job.stateid)') {{job.stateid}}
             td(title='{{job.bundle}}') {{job.bundle}}
@@ -195,7 +195,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
             td
               button.btn.btn-xs.btn-danger(ng-click='remHIT(task.tid, "H_"+task.hid)', title='Remove HIT {{task.hid}} from {{task.tid}}')
                 .fa.fa-remove
-              | &nbsp;&nbsp;{{task.time | date:"MM/dd/yyyy HH:mm"}}
+              | &nbsp;&nbsp;{{task.time | date:"yyyy/MM/dd HH:mm"}}
             td {{task.hid}}  
               b(ng-show='task.islive', style='color:green') Live
               span(ng-show='!task.islive', style='color:grey') Sandbox
@@ -234,7 +234,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               | &nbsp;&nbsp;
               button.btn.btn-xs.btn-success(title='Download list of VALID links for this HIT', ng-click='dlLinks(task, true)')
                 .fa.fa-thumbs-up
-              | &nbsp;{{task.time | date:"MM/dd/yyyy HH:mm"}}
+              | &nbsp;{{task.time | date:"yyyy/MM/dd HH:mm"}}
             td {{task.hid}}  
               b(ng-show='task.islive', style='color:green') Live
               span(ng-show='!task.islive', style='color:grey') Sandbox
@@ -265,7 +265,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
             th Turker
         tbody
           tr(ng-repeat='task in allHITs.doneASNs')
-            td {{task.time | date:"MM/dd/yyyy HH:mm"}}
+            td {{task.time | date:"yyyy/MM/dd HH:mm"}}
             td {{task.hid}}  
               b(ng-show='task.islive', style='color:green') Live
               span(ng-show='!task.islive', style='color:grey') Sandbox
