creating support for guest accounts and solidify usage allowances

--- a/bwapp2/client/views/partials/top-navbar.ng.jade
+++ b/bwapp2/client/views/partials/top-navbar.ng.jade
@@ -64,7 +64,11 @@ nav.navbar.topnavbar(role="navigation")
             a(href="/gensimpexp")
               .fa.fa-flask
               | &nbsp;Experiment
-        li.dropdown(ng-show='currentUser.profile.roles.indexOf("admin") >= 0')
+          li
+            a(href="/gencmdexp")
+              .fa.fa-terminal
+              | &nbsp;Command
+        //-li.dropdown(ng-show='currentUser.profile.roles.indexOf("admin") >= 0')
           a.dropdown-toggle(data-toggle="dropdown", href="#")
             //-i.glyphicon.glyphicon-search
             | Create&nbsp;
